--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ ipykernel==6.29.5
 ipython==8.18.1
 ipywidgets==8.1.5
 isoduration==20.11.0
+iterative-stratification==0.1.9
 jedi==0.19.2
 Jinja2==3.1.5
 joblib==1.4.2
@@ -60,6 +61,7 @@ kiwisolver==1.4.7
 MarkupSafe==3.0.2
 matplotlib==3.9.4
 matplotlib-inline==0.1.7
+minio==7.2.15
 mistune==3.1.1
 mpmath==1.3.0
 nbclient==0.10.2
@@ -70,6 +72,7 @@ networkx==3.2.1
 notebook==7.3.2
 notebook_shim==0.2.4
 numpy==2.0.2
+open_clip_torch==2.32.0
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -84,9 +87,11 @@ psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
+pycryptodome==3.22.0
 Pygments==2.19.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 python-json-logger==3.2.1
 pytz==2025.1
 PyYAML==6.0.2
@@ -108,6 +113,7 @@ stack-data==0.6.3
 sympy==1.13.1
 terminado==0.18.1
 threadpoolctl==3.5.0
+timm==1.0.15
 tinycss2==1.4.0
 tokenizers==0.21.0
 tomli==2.2.1
