--- a/requirements.txt
+++ b/requirements.txt
@@ -122,7 +122,7 @@ torchvision==0.21.0
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
-transformers==4.49.0
+transformers==4.48.0
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
 tzdata==2025.1
@@ -135,3 +135,6 @@ websocket-client==1.8.0
 widgetsnbextension==4.0.13
 zipp==3.21.0
 fairscale~=0.4.13
+evaluate~=0.4.3
+seaborn~=0.13.2
+datasets~=3.5.0
