--- a/configs/model/clip_swin_clinical.yaml
+++ b/configs/model/clip_swin_clinical.yaml
@@ -1,14 +1,14 @@
-name: "clip_custom"
+name: "pretrain_encoder"
 temperature: 0.07
 
 image_encoder:
-  source: "huggingface" # one of { "huggingface"}
+  source: "huggingface"
   name: 'microsoft/swin-tiny-patch4-window7-224'
   pretrained: true
   model_type: 'swin'
 
 text_encoder:
-  source: "huggingface" # one of { "huggingface"}
+  source: "huggingface"
   name: emilyalsentzer/Bio_ClinicalBERT
   pretrained: true
   gradient_checkpointing: false
