improved training pipelines. added comprehensive evaluation module for each configuration and task.

--- a/configs/model/conditional_report_gen.yaml
+++ b/configs/model/conditional_report_gen.yaml
@@ -1,5 +1,5 @@
 name: "downstream_decoder"
-load_backbone_weights: "./output/clip-xrgen-pretrained-encoder.pt"
+load_backbone_weights: "./output/clip-xrgen-pretrained-kldiv-encoder.pt"
 freeze_backbone_weights: true
 
 image_encoder:
@@ -11,13 +11,33 @@ image_encoder:
 
 text_decoder:
   source: "huggingface"
-  name: facebook/bart-base
+  name: "emilyalsentzer/Bio_ClinicalBERT"
   pretrained: true
   cache_dir: "huggingface/"
   trust_remote_code: true
 
-  max_input_length: 77
-  max_output_length: 143
+  max_length: 256
+  min_length: 128
+  max_prompt_length: 77
   beam_size: 5
-  instruction_prefix: "Indication: "
-  prompt_template: "Chest X-ray showing {}. Findings: "
+
+prompt_constructor:
+  prompt_strategy: "ground_truth"
+  prompt_file_path: "../../notebooks/output/train_prompts_all.json"
+  use_diverse_prompts: false
+
+  optimal_thresholds:
+    "Atelectasis": 0.5
+    "Cardiomegaly": 0.5
+    "Consolidation": 0.5
+    "Edema": 0.5
+    "Enlarged Cardiomediastinum": 0.5
+    "Fracture": 0.5
+    "Lung Lesion": 0.5
+    "Lung Opacity": 0.5
+    "No Finding": 0.5
+    "Pleural Effusion": 0.5
+    "Pleural Other": 0.5
+    "Pneumonia": 0.5
+    "Pneumothorax": 0.5
+    "Support Devices": 0.5
