--- a/configs/loss/contrastive.yaml
+++ b/configs/loss/contrastive.yaml
@@ -1,5 +1,4 @@
-contrastive:
-  label_smoothing: 0.0
-  i2i_weight: 1.0
-  t2t_weight: 0.5
+contrastive_semantic:
+  semantic_temperature: 1.0
+  semantic_weight: 0.7
   loss_ratio: 1.0
